# server

./: .env.example  .flake8  .gitignore  docker-compose.yaml  mypy.ini  prestart.sh  pyproject.toml  server.dockerfile  setup.cfg  tests-start.sh  worker-start.sh  worker.dockerfile
alembic/: env.py
alembic/versions/: 674599d43797_.py  c5db0d201050_users_table.py
app/: main.py  utils.py  worker.py
app/core/: celery_app.py  config.py  security.py
app/crud/: base.py  crud_user.py
app/db/: base.py  base_class.py  init_db.py  session.py
app/helpers/: emails.py  security.py
app/models/: models_user.py  user.py  utils.py
app/routes/: __init__.py
app/routes/api/: __init__.py  deps.py
app/routes/api/api_v1/: __init__.py
app/routes/api/api_v1/endpoints/: auth.py  users.py  utils.py
app/schemas/: base.py  schemas_token.py  schemas_user.py  user.py
app/scripts/: app_pre_start.py  init_db.py  initial_data.py  worker_pre_start.py
tests/: conftest.py  constants.py
tests/api/api_v1/: test_celery.py  test_login.py  test_users.py
tests/crud/: test_user.py
tests/utils/: user.py  utils.py
