[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Subham Agarwal"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "0.13.4"
fastapi = "0.63.0"
python-multipart = "^0.0.5"
email-validator = "^1.1.3"
requests = "^2.23.0"
celery = "^4.4.2"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^6.1.0"
pydantic = "1.8.2"
emails = "^0.6"
raven = "^6.10.0"
gunicorn = "20.0.4"
jinja2 = "2.11.3"
psycopg2-binary = "^2.9.1"
alembic = "^1.4.2"
sqlalchemy = "^1.4.18"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
typing-extensions = "^3.10.0"

[tool.poetry.dev-dependencies]
mypy = "0.790"
black = "20.8b1"
isort = "5.6.4"
autoflake = "^1.3.1"
flake8 = "3.8.4"
flake8-isort = "4.0.0"
pytest = "6.1.2"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^2.12.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
force_alphabetical_sort_within_sections = true
from_first = false
known_first_party = ""
known_local_folder = "app"
known_tests = "tests"
lines_after_imports = 2
lines_between_sections = 1
profile = "black"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER,TESTS"

[build-system]
requires = ["poetry==1.1.6"]
build-backend = "poetry.masonry.api"
